--- a/ASL AI.ipynb
+++ b/ASL AI.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tamer\n",
+    "#tamer on my laptop\n",
     "import cv2\n",
     "import numpy as np\n",
     "import os\n",
