--- a/classification.ipynb
+++ b/classification.ipynb
@@ -230,6 +230,18 @@
     "    tf.keras.layers.Dense(len(classes))\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#compile model\n",
+    "model.compile(optimizer='adam',\n",
+    "            loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "            metrics=['accuracy'])"
+   ]
   }
  ],
  "metadata": {
