--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
       "2.15.0\n"
      ]
     }
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +64,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting images of A\n",
+      "Getting images of B\n",
+      "Getting images of C\n",
+      "Getting images of D\n",
+      "Getting images of del\n",
+      "Getting images of E\n",
+      "Getting images of F\n",
+      "Getting images of G\n",
+      "Getting images of H\n",
+      "Getting images of I\n",
+      "Getting images of J\n",
+      "Getting images of K\n",
+      "Getting images of L\n",
+      "Getting images of M\n",
+      "Getting images of N\n",
+      "Getting images of nothing\n",
+      "Getting images of O\n",
+      "Getting images of P\n",
+      "Getting images of Q\n",
+      "Getting images of R\n",
+      "Getting images of S\n",
+      "Getting images of space\n",
+      "Getting images of T\n",
+      "Getting images of U\n",
+      "Getting images of V\n",
+      "Getting images of W\n",
+      "Getting images of X\n",
+      "Getting images of Y\n",
+      "Getting images of Z\n"
+     ]
+    }
+   ],
    "source": [
     "X, y = get_data(train_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +160,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "255\n"
-     ]
     }
    ],
    "source": [
@@ -141,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,16 +185,16 @@
     "    # where each column in a row corresponds to an int, and if the label corresponds to that int a 1 will go in that column, 0 if not\n",
     "    # this is called hot encoding\n",
     "    #label_encoded_y = tf.keras.utils.to_categorical(y)\n",
-    "    label_encoded_y = y\n",
+    "    #label_encoded_y = y\n",
     "    \n",
     "    #split X and y further into train and testing sets\n",
-    "    X_train, X_test, y_train, y_test = model_selection.train_test_split(normalized_X, label_encoded_y, test_size=0.2, random_state=1)\n",
+    "    X_train, X_test, y_train, y_test = model_selection.train_test_split(normalized_X, y, test_size=0.2, random_state=1)\n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -172,19 +202,23 @@
      "output_type": "stream",
      "text": [
       "X_train: (69600, 32, 32, 3)\n",
-      "X_test: (17400, 32, 32, 3)\n"
+      "X_test: (17400, 32, 32, 3)\n",
+      "y_train[0]: 7\n",
+      "y_train length: 69600\n"
      ]
     }
    ],
    "source": [
     "X_train, X_test, y_train, y_test = preprocess_data(X, y)\n",
     "print(\"X_train:\",X_train.shape)\n",
-    "print(\"X_test:\", X_test.shape)"
+    "print(\"X_test:\", X_test.shape)\n",
+    "print(\"y_train[0]:\",y_train[0])\n",
+    "print(\"y_train length:\", len(y_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -210,30 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#build model\n",
     "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Flatten(input_shape=(32, 32)),\n",
+    "    tf.keras.layers.Flatten(input_shape=(32, 32, 3)),\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
-    "    tf.keras.layers.Dense(len(classes))\n",
+    "    tf.keras.layers.Dense(29)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +265,43 @@
     "model.compile(optimizer='adam',\n",
     "            loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "            metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "2175/2175 [==============================] - 14s 6ms/step - loss: 2.6740 - accuracy: 0.2018\n",
+      "Epoch 2/5\n",
+      "2175/2175 [==============================] - 14s 6ms/step - loss: 2.0367 - accuracy: 0.3453\n",
+      "Epoch 3/5\n",
+      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.8305 - accuracy: 0.3986\n",
+      "Epoch 4/5\n",
+      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.7182 - accuracy: 0.4289\n",
+      "Epoch 5/5\n",
+      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.6348 - accuracy: 0.4517\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x27ce4d8a170>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#train model\n",
+    "model.fit(X_train, y_train, epochs=5)"
    ]
   }
  ],
