--- a/classification.ipynb
+++ b/classification.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -277,24 +277,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "2175/2175 [==============================] - 14s 6ms/step - loss: 2.6740 - accuracy: 0.2018\n",
+      "2175/2175 [==============================] - 14s 6ms/step - loss: 1.0369 - accuracy: 0.6301\n",
       "Epoch 2/5\n",
-      "2175/2175 [==============================] - 14s 6ms/step - loss: 2.0367 - accuracy: 0.3453\n",
+      "2175/2175 [==============================] - 12s 6ms/step - loss: 1.0328 - accuracy: 0.6344\n",
       "Epoch 3/5\n",
-      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.8305 - accuracy: 0.3986\n",
+      "2175/2175 [==============================] - 12s 5ms/step - loss: 1.0242 - accuracy: 0.6362\n",
       "Epoch 4/5\n",
-      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.7182 - accuracy: 0.4289\n",
+      "2175/2175 [==============================] - 14s 6ms/step - loss: 1.0175 - accuracy: 0.6360\n",
       "Epoch 5/5\n",
-      "2175/2175 [==============================] - 13s 6ms/step - loss: 1.6348 - accuracy: 0.4517\n"
+      "2175/2175 [==============================] - 12s 5ms/step - loss: 1.0071 - accuracy: 0.6416\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x27ce4d8a170>"
+       "<keras.src.callbacks.History at 0x27ce538e590>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,6 +302,28 @@
    "source": [
     "#train model\n",
     "model.fit(X_train, y_train, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "544/544 - 1s - loss: 1.0386 - accuracy: 0.6198 - 910ms/epoch - 2ms/step\n",
+      "Test accuracy: 0.6198275685310364\n",
+      "Test loss: 1.0386444330215454\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluate accuracy\n",
+    "test_loss, test_acc = model.evaluate(X_test, y_test, verbose=2)\n",
+    "print('Test accuracy:', test_acc)\n",
+    "print('Test loss:', test_loss)"
    ]
   }
  ],
