--- a/classification.ipynb
+++ b/classification.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
      "text": [
       "X_train: (69600, 32, 32, 3)\n",
       "X_test: (17400, 32, 32, 3)\n",
-      "y_train[0]: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "y_train[0]: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 0. 0. 0. 0.]\n",
       "y_train length: 69600\n"
      ]
@@ -239,31 +239,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 30, 30, 32)        896       \n",
+      " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPoolin  (None, 15, 15, 32)        0         \n",
+      " max_pooling2d (MaxPooling2  (None, 15, 15, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 13, 13, 32)        9248      \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 6, 6, 32)          0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " flatten_4 (Flatten)         (None, 7200)              0         \n",
+      " flatten (Flatten)           (None, 1152)              0         \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 64)                460864    \n",
+      " dense (Dense)               (None, 128)               147584    \n",
       "                                                                 \n",
-      " dense_9 (Dense)             (None, 29)                1885      \n",
+      " dense_1 (Dense)             (None, 29)                3741      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 463645 (1.77 MB)\n",
-      "Trainable params: 463645 (1.77 MB)\n",
+      "Total params: 161469 (630.74 KB)\n",
+      "Trainable params: 161469 (630.74 KB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
@@ -275,9 +284,11 @@
     "model = models.Sequential()\n",
     "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Flatten())\n",
     "#model.add(layers.Flatten(input_shape=(32, 32, 3)))\n",
-    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(128, activation='relu'))\n",
     "model.add(layers.Dense(29))\n",
     "model.summary()\n",
     "# model = tf.keras.Sequential([\n",
@@ -289,9 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#compile model\n",
     "model.compile(optimizer='adam',\n",
@@ -301,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,24 +329,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "2175/2175 [==============================] - 43s 17ms/step - loss: 1.9264 - accuracy: 0.4158\n",
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Rinzler\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "2175/2175 [==============================] - 37s 15ms/step - loss: 1.0743 - accuracy: 0.6754\n",
       "Epoch 2/5\n",
-      "2175/2175 [==============================] - 33s 15ms/step - loss: 0.9153 - accuracy: 0.7037\n",
+      "2175/2175 [==============================] - 30s 14ms/step - loss: 0.2410 - accuracy: 0.9223\n",
       "Epoch 3/5\n",
-      "2175/2175 [==============================] - 30s 14ms/step - loss: 0.6426 - accuracy: 0.7895\n",
+      "2175/2175 [==============================] - 31s 14ms/step - loss: 0.1238 - accuracy: 0.9601\n",
       "Epoch 4/5\n",
-      "2175/2175 [==============================] - 31s 14ms/step - loss: 0.4992 - accuracy: 0.8373\n",
+      "2175/2175 [==============================] - 37s 17ms/step - loss: 0.0856 - accuracy: 0.9721\n",
       "Epoch 5/5\n",
-      "2175/2175 [==============================] - 35s 16ms/step - loss: 0.4103 - accuracy: 0.8665\n"
+      "2175/2175 [==============================] - 34s 15ms/step - loss: 0.0632 - accuracy: 0.9798\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x2d9ecbe2470>"
+       "<keras.src.callbacks.History at 0x170f74b7d00>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,16 +362,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "544/544 - 5s - loss: 0.4529 - accuracy: 0.8434 - 5s/epoch - 8ms/step\n",
-      "Test accuracy: 0.843448281288147\n",
-      "Test loss: 0.4528619647026062\n"
+      "INFO:tensorflow:Assets written to: model.h1\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: model.h1\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "#save model\n",
+    "model.save('model.h1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "544/544 - 7s - loss: 0.0574 - accuracy: 0.9806 - 7s/epoch - 12ms/step\n",
+      "Test accuracy: 0.9805747270584106\n",
+      "Test loss: 0.057419996708631516\n"
      ]
     }
    ],
