added text wrapping so it doesn't go off screen

--- a/AI_ASL1.ipynb
+++ b/AI_ASL1.ipynb
@@ -29,7 +29,7 @@
     "cap.set(cv2.CAP_PROP_FRAME_WIDTH, 450)\n",
     "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 450)\n",
     "\n",
-    "MAX_LINE_LEN = 20\n",
+    "MAX_LINE_LEN = 10\n",
     "sentence = \"\"\n",
     "word = \"\"\n",
     "while True:\n",
@@ -38,8 +38,26 @@
     "    results = hands.process(rgb_frame) \n",
     "\n",
     "    cv2.putText(frame, f\"Word: {word}\", (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, 0))\n",
-    "    cv2.putText(frame, f\"Sentence: {sentence}\", (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255))\n",
-    "    \n",
+    "\n",
+    "    #add text wrapping\n",
+    "    lines = []\n",
+    "    if sentence.split():\n",
+    "        words = sentence.split()\n",
+    "        line = words[0]\n",
+    "        for word in words[1:]:\n",
+    "            if len(line + ' ' + word) <= MAX_LINE_LEN:\n",
+    "                line += ' ' + word\n",
+    "            else:\n",
+    "                lines.append(line)\n",
+    "                line = word\n",
+    "        lines.append(line)\n",
+    "        y_offset = 0\n",
+    "        for line in lines:\n",
+    "            cv2.putText(frame, f\"Sentence: {line}\", (10, 90 + y_offset), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255))\n",
+    "            y_offset += 30\n",
+    "    else:\n",
+    "        cv2.putText(frame, f\"Sentence: {sentence}\", (10, 90), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255))\n",
+    "\n",
     "    if results.multi_hand_landmarks is not None:\n",
     "        for hand_landmarks in results.multi_hand_landmarks:\n",
     "            mp_drawing.draw_landmarks(frame, hand_landmarks, mp_hands.HAND_CONNECTIONS,  #draw landmarks on frame\n",
